--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,22 @@ name: emcli
 channels:
   - defaults
 dependencies: # tested on WSL with Ubuntu 18.04
+  # conda install pip
+  # pip install numpy
+  # pip install matplotlib
+  # pip install tqdm
+  # pip install cartopy
+  # pip install xarray
+  # pip install notebook
+  # pip install netcdf4
+  # pip install dask
+  # pip install bottleneck
+  # pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
+  # pip install tqdm
+  # pip install ipywidgets
+  # python -m ipykernel install --user --name=emcli
+
+
   - pytorch:pytorch
   - pytorch:torchvision
   - pytorch:cudatoolkit=11.3
