--- a/environment.yml
+++ b/environment.yml
@@ -19,6 +19,7 @@ dependencies: # tested on WSL with Ubuntu 18.04
   # pip install hvplot # to create interactive plots nicely integrated with xarray
   # pip install jupyter_bokeh # to make hvplot run
   # pip install geoviews # to create geospatial plots in hvplot
+  # pip install scikit-learn
   # python -m ipykernel install --user --name=emcli
   # pip install -e .
 
