edited env yaml

--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,27 @@ name: emcli
 channels:
   - defaults
 dependencies: # tested on WSL with Ubuntu 18.04
+  - pip
+  - pip:
+    - numpy
+    - matplotlib
+    - tqdm
+    - cartopy
+    - xarray
+    # - notebook
+    - netcdf4
+    - dask
+    - bottleneck
+    # - torch torchvision --index-url https://download.pytorch.org/whl/cpu
+    - tqdm
+    # - ipywidgets
+    # - hvplot # to create interactive plots nicely integrated with xarray
+    # - jupyter_bokeh # to make hvplot run
+    # - geoviews # to create geospatial plots in hvplot
+    - scikit-learn
+    - regionmask
+    - streamlit
+
   # conda install pip
   # pip install numpy
   # pip install matplotlib
@@ -26,17 +47,17 @@ dependencies: # tested on WSL with Ubuntu 18.04
   # pip install -e .
 
 
-  - pytorch:pytorch
-  - pytorch:torchvision
-  - pytorch:cudatoolkit=11.3
-  - python # =3.10.6
-  - numpy # Tested with 1.19.2
-  - pandas # 1.2.1
-  - scikit-learn # 0.23.2
-  - matplotlib # 3.3.2
-  - tqdm # 4.55.1
-  - jupyterlab # 3.2.4
-  - scikit-image
-  - pip
-  - pip:
-    - scikit-optimize # 0.8.1
+#  - pytorch:pytorch
+#  - pytorch:torchvision
+#  - pytorch:cudatoolkit=11.3
+#  - python # =3.10.6
+#  - numpy # Tested with 1.19.2
+#  - pandas # 1.2.1
+#  - scikit-learn # 0.23.2
+#  - matplotlib # 3.3.2
+#  - tqdm # 4.55.1
+#  - jupyterlab # 3.2.4
+#  - scikit-image
+#  - pip
+#  - pip:
+#    - scikit-optimize # 0.8.1
