--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,32 @@
-# status 10/2023: tested to run webapp. Not tested for climate_emulato_tutorial.ipynb
+# status 11/2023: tested and works.
 numpy
 matplotlib
 tqdm
 cartopy
 xarray
-# notebook
+notebook
 netcdf4
 dask
-# bottleneck
-# torch torchvision --index-url https://download.pytorch.org/whl/cpu
-tqdm
-# ipywidgets
-# hvplot # to create interactive plots nicely integrated with xarray
-# jupyter_bokeh # to make hvplot run
-# geoviews # to create geospatial plots in hvplot
-scikit-learn
-# regionmask
-streamlit
+bottleneck # ERROR: Could not find a version that satisfies the requirement bottleneneck (from versions: none) ERROR: No matching distribution found for bottleneneck
+torch # deep learning library. Will install CUDA if GPU is available. Might take a while >1GB packages
+torchvision
+ipywidgets
+hvplot # to create interactive plots nicely integrated with xarray
+jupyter_bokeh # to make hvplot run
+geoviews # to create geospatial plots in hvplot
+scikit-learn # for linear regression model and some data preprocessing
+regionmask # for plotting regional boundaries
+streamlit # for webdemo
 xskillscore # for error metrics on xarrays
+
+# status 10/2023: tested to run webapp. Not tested for climate_emulato_tutorial.ipynb
+#numpy
+#matplotlib
+#tqdm
+#cartopy
+#xarray
+#netcdf4
+#dask
+#tqdm
+#scikit-learn
+#streamlit
